	* R388 -- FIXED: Cycling through elements when one is deleted works correctly. getNearestMidiEvent() behaviour fixed.
	* R389 -- ADDED: Paste also works only if a single element is selected (ie. no selection block).
	* R390 -- FIXED: Export LilyPond alternative repeat markings correctly.
	* R392 -- FIXED: Placed Clef and/or KeySig is now properly interpreted in non-first voices when the rhythm is different than in the first voice. Playback is still messed up. Removed some debugging stuff.
	* R399 -- FIXED: Key shortcuts not working anymore on KDE3.5. Thanks to Adam.
	* R400 -- FIXED: Compiler warnings for chord.cpp/h, chorddiagram.cpp/h, clef.cpp, midiexport.cpp/h, musixtex.cpp and musicxmlcommon.cpp/h.
	* R401: small LilyPond export filter fix: Pianostaff (Grandstaff) accepts lyrics.
	* R402: Insert clef dialog now supports:
	  - mouse wheel for scrolling
	  - double click to confirm the selection
	  - up/down keys to walk through elements
	  - return/escape keys to confirm/cancel the selection
	  TODO: Get rid of the stupid timer that calls refresh procedures and start using Qt's implemented solutions for that (needs probably some restructuring as well).
	* R403: Fixed compiler warnings: lexik.ll, grammar.yy, lilyexport.cpp/h, chord.cpp/h, staff.cpp/h, mainframewidget.cpp/h, voice.cpp/h, resource.cpp/h.
	* R405: ADDED:
	  - implemented Insert special barline dialog
	  - if an element is selected, barline is inserted right after it. Otherwise, only the selected barline becomes the current item being placed when you first click on the score.
	  - added menu option Insert->Special barline...
	  - added shortcut key SHIFT+Key_Tab for this
	  - Escape key now unselects the current active sign to be placed (e.g. barline)
	  - Home/End keys hit multiple times select the first/last element
	  - Home/End keys goes to the last X pos of the current staff
	  - some other minor fixes and additions
	* R406: FIXED: Crash, when canceling the selection in special barline dialog.